# reviewai-gerrit-plugin

./: .gitignore  BUILD  MODULE.bazel  README.md  external_plugin_deps.MODULE.bazel  gerrit.config  pom.xml
.gerrit/: Jenkinsfile
frontend/: plugin.js
src/main/resources/config/: formatRepliesSchema.json  formatRepliesTool.json  getContextTool.json  prompts.json  promptsAi.json  promptsAiRequests.json  promptsAiSuggest.json  promptsOpenAiReview.json
src/main/resources/localization/: localTexts.properties
src/main/resources/static/: init.js
src/main/resources/static/reviewai/: api.js  components.js  dom.js  entries.js  render.js  reviewAgent.js  shared.js
src/test/resources/__files/codefinder/: BleTest.kt
src/test/resources/__files/commands/: dumpConfig.txt  partialReviewPositiveScoreNoVoteSystemMessage.txt  review.json  showInstructionsRemovedTitle.txt  showInstructionsTitles.txt  showSuggestInstructionsCommitMessageText.txt  showSuggestInstructionsPatchSetText.txt  showSuggestInstructionsTitles.txt  showSuggestPromptsTitles.txt  unsupportedOnlyPatch.txt
src/test/resources/__files/config/: globalMultipleAiProviders.config  globalOpenAiModels.config  ollamaBareModels.config  projectOpenAiModel.config  projectOpenAiProvider.config
src/test/resources/__files/gerrit/: codeReviewPositiveToNegativeChangeMessage.txt  codeReviewPositiveToNegativeChangeMessageWithComment.txt  gerritPrompts.ts
src/test/resources/__files/langchain/: aiResponseContentWithTrailingWhitespace.json  chatMemoryAiMessage.txt  chatMemoryUserMessage.txt  routerAiDataPromptWithHistory.json  (+4 more)
(+319 files in other folders)
